@@ -76,7 +76,7 @@
 		</select>
 		<!-- ###LANGUAGES### [end] -->
 	</div>
-	<input type="submit" value="OK" />
+	<input type="submit" id="tx_egovapi_selectorForm_submit" value="OK" />
 </form>
 
 <!-- ###TEMPLATE### [end] -->
